@@ -41,6 +41,9 @@ import java.util.TimeZone;
  *
  */
 public abstract class KondutoModel {
+	/**
+	 * Default constructor.
+	 */
 	protected KondutoModel(){ }
 
 	@Override
@@ -56,6 +59,9 @@ public abstract class KondutoModel {
 	private static  Type bank = new TypeToken<KondutoBank>(){}.getType();
 
 
+	/**
+	 * The Gson instance used for JSON serialization and deserialization.
+	 */
 	protected static Gson gson = new GsonBuilder()
 			.registerTypeAdapter(paymentCollectionType, new KondutoPaymentCollectionDeserializer())
 			.registerTypeHierarchyAdapter(KondutoPayment.class, new KondutoPaymentSerializer())
@@ -69,6 +75,9 @@ public abstract class KondutoModel {
             .setDateFormat("yyyy-MM-dd")
 			.create();
 
+	/**
+	 * The list of validation errors.
+	 */
 	protected transient List<String> errors = new ArrayList<String>();
 
 	/* Serialization methods */
@@ -76,7 +85,7 @@ public abstract class KondutoModel {
 	/**
 	 * Serializes a model instance to JSON.
 	 * @return a {@link com.google.gson.JsonObject}
-	 * @throws KondutoInvalidEntityException
+	 * @throws KondutoInvalidEntityException if the model instance is not valid
 	 */
 	public JsonObject toJSON() throws KondutoInvalidEntityException{
 		if(!this.isValid()) { throw new KondutoInvalidEntityException(this); }
@@ -96,7 +105,8 @@ public abstract class KondutoModel {
 	/* Error printing methods */
 
 	/**
-	 * @return {@link com.konduto.sdk.models.KondutoModel#errors errors} pretty printed.
+	 * Gets the errors pretty printed.
+	 * @return the errors pretty printed
 	 */
 	public String getErrors(){
 		StringBuilder errors = new StringBuilder();
@@ -141,6 +151,7 @@ public abstract class KondutoModel {
     }
 
 	/**
+	 * Adds an invalid error message to the errors list.
 	 *
 	 * @param errors a String containing a
 	 * {@link com.konduto.sdk.models.KondutoModel#errors KondutoModel instance errors}
@@ -150,7 +161,8 @@ public abstract class KondutoModel {
 	}
 
 	/**
-	 * @return whether this KondutoModel instance is valid or not.
+	 * Checks whether this KondutoModel instance is valid or not.
+	 * @return whether this KondutoModel instance is valid or not
 	 */
 	/* Validation method */
 	public boolean isValid() {
@@ -216,6 +228,12 @@ public abstract class KondutoModel {
 		return (a == b) || (a != null && a.equals(b));
 	}
 
+	/**
+	 * Gets all fields from the class and its superclasses.
+	 * @param fields the list to add fields to
+	 * @param type the class type
+	 * @return the list of fields
+	 */
 	public static List<Field> getAllFields(List<Field> fields, Class<?> type) {
 		fields.addAll(Arrays.asList(type.getDeclaredFields()));
 
@@ -231,18 +249,21 @@ public abstract class KondutoModel {
 	 *
 	 * @param attributes a {@link HashMap} containing attributes. For a field 'totalAmount' with type Long, we should
 	 *                   add the following entry to the map: 'totalAmount', 123L.
+	 * @param klass the class type to instantiate
+	 * @return an instance of KondutoModel (e.g a KondutoAddress if klass is {@code KondutoAddress.class})
 	 */
 	public static KondutoModel fromMap(Map<String,Object> attributes, Class<?> klass){
 
 		KondutoModel model;
-
 		try {
-			model = (KondutoModel) klass.newInstance();
+			model = (KondutoModel) klass.getDeclaredConstructor().newInstance();
 		} catch (InstantiationException e) {
 			e.printStackTrace();
 			throw new RuntimeException("could not instantiate an object of " + klass);
 		} catch (IllegalAccessException e) {
 			throw new RuntimeException("constructor is not accessible in " + klass);
+		} catch (Exception e) {
+			throw new RuntimeException("could not instantiate an object of " + klass, e);
 		}
 
 
@@ -333,6 +354,12 @@ public abstract class KondutoModel {
 		return this;
 	}
 
+	/**
+	 * Checks if two dates are equal, handling null values.
+	 * @param one the first date
+	 * @param two the second date
+	 * @return true if both are null or equal, false otherwise
+	 */
 	protected boolean nullSafeAreDatesEqual(Date one, Date two){
 		return (one == null && two == null) ||
 				((one != null && two != null) && one.compareTo(two) == 0);
